--- a/TestCsvObjectify/TestCsvObjectify.csproj
+++ b/TestCsvObjectify/TestCsvObjectify.csproj
@@ -21,6 +21,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="TestFiles\EmployeeWithHeader.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="TestFiles\FilePath.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
